CHANGELOG

2.0.50
UTILS:
* type=dhcp - introduction
* development ike.php - extension for GreTunnel

BUGFIX:

GENERAL:
* bash autocompletion - extension for actions= filter=
* introduce class DHCP / GreTunnel and all respective additions for UTILS


2.0.49 (20220726)
UTILS:
* pan-os-php type=diff | introduce for argument filter=JSONFILE.json
* type=diff | introduce of filtering on xpath with name1 and name2 arguments as variable
* type=diff | extend usage help for all possible arguments

BUGFIX:
* class UTIL | bugfix if no timezone setting can be found

GENERAL:
* update util_action_filter.json file


2.0.48 (20220720)
UTILS:
* UTIL type=securityprofile securityprofiletype=url-filtering | improvements actions=url-filtering-action-set:[ACTION],[category]
* UTIL type=rule | introduce ruletype=tunnelinspection

BUGFIX:
* UTIL type=address/service/tag/application/zone | bugfix for 'filter=(object is.unused)' - direct benefit of class TunnelInspectionRule
* class logwriter/UTIL - fix to use settimezone() also on Expedition-Converter
* class Manageddevice - bugfix for reading manageddevice from Panorama
* class CIDR | bugfix for specific use case

GENERAL:
* introduce class TunnelInspectionRule


2.0.47 (20220714)
UTILS:
* UTIL type=Rule | introduce 'filter=(app has.fromquery subquery1)' 'subquery=([application filters])'
* UTIL type=rule | introduce 'filter=(app risk.recursive.is 3)'
* update internal JSON files for pan-os-php API usage
* multiple classes | improvements for buckbeak
* UTIL type=service-merger | improvements for exportcsv
* UTIL type=upload - extend help information
* UTIL type=securityprofile securityprofiletype=url-filtering | introduce actions=url-filtering-action-set:[ACTION],[category]

BUGFIX:
* class AppRuleContainer | bugfix for method membersExpanded()

GENERAL:
* update predefined to 859207467


2.0.46 (20220708)
UTILS:
* class DeviceOnPrem - introduction - Buckbeak - improving other Rule classes to be prepared for Snippets